--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Joseph Vito</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div id="center">
+        <p id="name">Joseph Vito</p>
+        <div id="nav">
+          <a class="nav" href="index.html">About</a>
+          <a class="nav" href="portfoilio.html">Portfolio</a>
+          <a class="nav" href="contact.html">Contact</a>
+        </div>
+      </div>
+    </header>
+
+    <section>
+      <h1>About Me</h1>
+      <hr />
+      <img src="assets/images/ProfilePicture.jpg" alt="pic" />
+      <p>
+        My name is Emanuel Joseph Vito, but I go by Joseph because my father
+        shares the same first name. My father works as programmer for
+        HealthFirst, a company that sells patient management software to medical
+        institutions. My mother retired from 20 years of tech support to be a
+        stay at home mother for my little sister. My brother is 3 years my
+        junior and is currently trying to figure out what he wants to spend the
+        rest of his life doing. My sister is a whopping 15 years younger than
+        me, but I love her dearly and she is spoiled rotten.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iste odit
+        maiores nisi quia dolorum similique doloremque, quae illum ratione
+        aliquam magni, eveniet quis, molestiae iusto qui asperiores atque soluta
+        aperiam. Facilis assumenda laudantium iusto cum dolorem recusandae unde
+        aspernatur ipsa eos animi doloremque magnam porro, dignissimos tenetur
+        culpa excepturi. Est doloribus sequi ad voluptas voluptatum dignissimos
+        quaerat minus tempore accusantium molestias deleniti, repellendus ipsam
+        nobis nulla assumenda, maiores odio? Blanditiis ipsam soluta ex
+        voluptatibus perspiciatis laudantium esse omnis dolorum molestiae,
+        similique temporibus, at nisi suscipit consequatur explicabo recusandae
+        in nihil cumque minus architecto obcaecati. Beatae, illo provident nam,
+        ratione velit optio temporibus reprehenderit, vel fuga ex dignissimos
+        deserunt rem voluptatum similique odit amet doloremque sint repellendus
+        magni! Quos temporibus possimus impedit laboriosam ratione sit, pariatur
+        esse, perspiciatis nostrum porro id magnam, et commodi. Voluptatem magni
+        est expedita, dolor nobis eaque ab temporibus animi, reprehenderit
+        recusandae, soluta magnam. Quasi eveniet totam similique eaque ipsam
+        corporis dolor at? Est a accusantium nisi error culpa omnis? Nam omnis,
+        natus ea fuga, error, perferendis facere repellat ad temporibus deleniti
+        ullam quia? Distinctio omnis iure ad expedita, amet quae aperiam porro
+        perferendis, dignissimos blanditiis molestias est culpa impedit nulla
+        recusandae repudiandae dolores voluptate quos.
+      </p>
+    </section>
+
+    <footer>
+      <!--Nothing to see here-->
+    </footer>
+  </body>
 </html>
