--- a/portfoilio.html
+++ b/portfoilio.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div id="center">
+        <p id="name">Joseph Vito</p>
+        <div id="nav">
+          <a class="nav" href="index.html">About</a>
+          <a class="nav" href="portfoilio.html">Portfolio</a>
+          <a class="nav" href="contact.html">Contact</a>
+        </div>
+      </div>
+    </header>
+
+    <section>
+      <h1>Portfolio</h1>
+      <hr />
+      <img src="https://via.placeholder.com/150" />
+      <img src="https://via.placeholder.com/150" />
+      <img src="https://via.placeholder.com/150" />
+      <img src="https://via.placeholder.com/150" />
+      <img src="https://via.placeholder.com/150" />
+    </section>
+
+    <footer>
+      <!--Nothing to see here-->
+    </footer>
+  </body>
 </html>
