--- a/portfoilio.html
+++ b/portfoilio.html
@@ -7,8 +7,9 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
-    <header>
+    <header> 
       <div id="center">
         <p id="name">Joseph Vito</p>
         <div id="nav">
@@ -19,7 +20,7 @@
       </div>
     </header>
 
-    <section>
+    <section id="hotfix">
       <h1>Portfolio</h1>
       <hr />
       <img src="https://via.placeholder.com/150" />
